change img size

--- a/index.html
+++ b/index.html
@@ -89,17 +89,18 @@
                     którzy z humorem i szczerością biorą na warsztat najtrudniejsze tematy technologiczne.
                 </p>
             </div>
-            <img class="pt-[47px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg" alt="cross-img">
+            <img class="pt-[47px] md:flex hidden pointer-events-none" src="./assets/images/svg/cross.svg"
+                alt="cross-img">
         </div>
         <img class="absolute md:flex hidden bottom-0 right-0 w-full pointer-events-none"
             src="./assets/images/png/cloud-white.png" alt="white cloud">
     </section>
     <!-- podcast section -->
     <section id="podcast"
-        class="lg:min-h-[1007px] md:min-h-[700px] sm:min-h-[550px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
+        class="xl:min-h-[1007px] lg:min-h-[900px] md:min-h-[700px] sm:min-h-[600px] min-h-[415px] relative max-w-[1920px] w-full mx-auto lg:pt-[58px] md:pt-[50px] pt-[37px]">
         <img class="absolute top-[88px] max-lg:hidden right-[120px] pointer-events-none"
             src="./assets/images/svg/rounded-cross.svg" alt="rounded-cross">
-        <img class="absolute top-[212px] max-md:hidden right-[-56px] pointer-events-none"
+        <img class="absolute top-[209px] max-md:hidden right-[-56px] pointer-events-none"
             src="./assets/images/svg/cross.svg" alt="cross">
         <div class="max-w-[1240px] mx-auto px-[30px] w-full">
             <div class="max-w-[592px] mx-auto w-full">
@@ -113,8 +114,9 @@
                 </p>
             </div>
         </div>
-        <img class="absolute pointer-events-none bottom-0 left-0 right-0 w-full max-h-[314px] sm:max-h-[1000px]"
+        <img class="absolute pointer-events-none max-sm:-translate-x-1/2 left-[50%] bottom-0 max-sm:min-w-[504px] max-sm:max-w-[504px] md:bottom-[-70px] xl:bottom-[-130px] sm:left-0 sm:right-0 w-full max-sm:min-h-[314px] max-sm:max-h-[314px] xl:min-h-[1000px] sm:max-h-[1000px]"
             src="./assets/images/png/two-man-with-podcast.png" alt="podcast">
+        <img class="absolute bottom-0 w-full left-0" src="./assets/images/png/podcast-cloud.png" alt="">
     </section>
     <!-- NAS SECTION -->
     <section class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
@@ -124,7 +126,7 @@
                     <h2 class="font-semibold text-[64px] text-light-black font-tomorrow leading-[100%] uppercase">
                         O nas
                     </h2>
-                    <div class="absolute top-[9%] left-[33%] hidden lg:block">
+                    <div class="absolute top-[9%] left-[33%] hidden lg:block pointer-events-none">
                         <img src="./assets/images/svg/arrow.svg" alt="decorative arrow">
                     </div>
                     <div class="xl:pt-16 pt-8">
@@ -141,10 +143,12 @@
                         </p>
                         <div class="pt-[35px] gap-3 flex">
                             <a href="https://in.linkedin.com/" target="_blank">
-                                <img src="./assets/images/svg/linkdin.svg" alt="LinkedIn profile">
+                                <img class="pointer-events-none" src="./assets/images/svg/linkdin.svg"
+                                    alt="LinkedIn profile">
                             </a>
                             <a href="https://x.com/?lang=en" target="_blank">
-                                <img src="./assets/images/svg/twitter.svg" alt="Twitter profile">
+                                <img class="pointer-events-none" src="./assets/images/svg/twitter.svg"
+                                    alt="Twitter profile">
                             </a>
                         </div>
                     </div>
@@ -162,30 +166,34 @@
                         </p>
                         <div class="pt-[35px] gap-3 flex">
                             <a href="https://in.linkedin.com/" target="_blank">
-                                <img src="./assets/images/svg/linkdin.svg" alt="LinkedIn profile">
+                                <img class="pointer-events-none" src="./assets/images/svg/linkdin.svg"
+                                    alt="LinkedIn profile">
                             </a>
                             <a href="https://x.com/?lang=en" target="_blank">
-                                <img src="./assets/images/svg/twitter.svg" alt="Twitter profile">
+                                <img class="pointer-events-none" src="./assets/images/svg/twitter.svg"
+                                    alt="Twitter profile">
                             </a>
                         </div>
                     </div>
                     <a href="#"
                         class="inline-flex items-center justify-between gap-5 bg-white text-black lg:mt-[65px] mt-11 mb-5 pl-[5px] pr-10 py-[5px] rounded-full font-semibold shadow-md hover:bg-gray-100 transition">
                         <span class="size-[35px] flex items-center justify-center bg-orange rounded-full text-white">
-                            <img src="./assets/images/svg/right-arrow.svg" alt="right arrow">
+                            <img class="pointer-events-none" src="./assets/images/svg/right-arrow.svg"
+                                alt="right arrow">
                         </span>
                         <span class="text-xl font-semibold font-inter leading-[32px]">Bezpłatna Konsultacja</span>
                     </a>
                 </div>
                 <div>
                     <img src="./assets/images/svg/circle.svg" alt="decorative circle"
-                        class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] lg:size-[230px] md:size-[100px] size-12 top-0">
+                        class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] pointer-events-none lg:size-[230px] md:size-[100px] size-12 top-0">
                     <img src="./assets/images/png/two-people.png" alt="Two people"
-                        class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] lg:absolute xl:top-[8%] top-[11%] right-[0%] object-cover rounded-lg z-0">
+                        class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] pointer-events-none lg:absolute xl:top-[8%] top-[11%] right-[0%] object-cover rounded-lg z-0">
                 </div>
             </div>
         </div>
-        <img src="./assets/images/png/layer.png" alt="decorative layer" class="z-20 absolute bottom-0">
+        <img src="./assets/images/png/layer.png" alt="decorative layer"
+            class="z-20 pointer-events-none absolute bottom-0">
     </section>
     <!-- USŁUGI SECTION -->
     <section class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
@@ -195,7 +203,7 @@
                     class="md:text-[64px] text-5xl uppercase text-white xl:pb-[176px] lg:pb-32 md:pb-[76px] pb-14 font-medium font-tomorrow">
                     Usługi</h2>
                 <img src="./assets/images/svg/faq-arrow.svg" alt="faq-arrow"
-                    class="lg:pb-[93px] pb-[40px]  max-lg:size-28 max-md:size-20">
+                    class="lg:pb-[93px] pb-[40px]  max-lg:size-28 max-md:size-20 pointer-events-none">
             </div>
             <div id="accordion" class="flex flex-col md:gap-11 gap-6">
                 <div class="accordion-item bg-white text-black overflow-hidden transition-all duration-500 ease-in-out rounded-full"
@@ -206,7 +214,7 @@
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
                             <img src="./assets/images/svg/white-arrow.svg" alt="white-arrow"
-                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300">
+                                class="md:w-[50px] w-5 arrow-icon pointer-events-none transition-transform duration-300">
                         </span>
                     </button>
                     <div
@@ -222,7 +230,7 @@
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
                             <img src="./assets/images/svg/white-arrow.svg" alt="white-arrow"
-                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300">
+                                class="md:w-[50px] w-5 arrow-icon pointer-events-none transition-transform duration-300">
                         </span>
                     </button>
                     <div
@@ -238,7 +246,7 @@
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
                             <img src="./assets/images/svg/white-arrow.svg" alt="white-arrow"
-                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300">
+                                class="md:w-[50px] w-5 arrow-icon pointer-events-none transition-transform duration-300">
                         </span>
                     </button>
                     <div
@@ -254,7 +262,7 @@
                         <span
                             class="arrow bg-black text-white md:size-[75px] size-[40px] flex items-center justify-center rounded-full">
                             <img src="./assets/images/svg/white-arrow.svg" alt="white-arrow"
-                                class="md:w-[50px] w-5 arrow-icon transition-transform duration-300">
+                                class="md:w-[50px] w-5 arrow-icon pointer-events-none transition-transform duration-300">
                         </span>
                     </button>
                     <div
