neclink id changed

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
                     class="flex md:justify-between duration-300 justify-center z-40 max-md:backdrop-blur-[100px] max-md:fixed top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-md:min-h-screen max-md:w-full max-md:flex-col max-md:gap-y-10">
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#gdzieSłuchać">Gdzie słuchać</a>
+                        <a class="nav-link" href="#gdzieSłuchać">Gdzie słuchać</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#oNas">O nas</a>
+                        <a class="nav-link" href="#oNas">O nas</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#szkolenia">Szkolenia</a>
+                        <a class="nav-link" href="#szkolenia">Szkolenia</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#bezpłatnaKonsultacja">Bezpłatna Konsultacja</a>
+                        <a class="nav-link" href="#bezpłatnaKonsultacja">Bezpłatna Konsultacja</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#kontakt">Kontakt</a>
+                        <a class="nav-link" href="#kontakt">Kontakt</a>
                     </li>
                 </ul>
                 <div onclick="toggleNavbar()"
@@ -333,7 +333,7 @@
         <img class="absolute right-0 bottom-0 pointer-events-none max-sm:max-w-[114px] max-sm:max-h-[166px] max-md:max-w-[300px]"
             src="./assets/images/svg/horse.svg" alt="horse-img">
     </section>
-    <!--------------------- footer --------------------->
+    <!-- footer -->
     <footer id="footer"
         class="bg-light-black px-[30px] max-w-[1920px] mx-auto sm:px-5 lg:px-[110px] relative pb-[35px] sm:pb-[65px]">
         <div class="max-w-[1240px] mx-auto">
