--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     class="flex md:justify-between duration-300 justify-center z-40 max-md:backdrop-blur-[100px] max-md:fixed top-0 -right-full items-center py-5 px-[23px] w-full font-inter max-md:min-h-screen max-md:w-full max-md:flex-col max-md:gap-y-10">
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#gdzieSłuchać">Gdzie słuchać</a>
+                        <a id="nav-link" href="#patoarchitekciPodcast">Gdzie słuchać</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
@@ -34,15 +34,15 @@
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#szkolenia">Szkolenia</a>
+                        <a id="nav-link" href="#uslugi">Szkolenia</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#bezpłatnaKonsultacja">Bezpłatna Konsultacja</a>
+                        <a id="nav-link" href="#protopia">Bezpłatna Konsultacja</a>
                     </li>
                     <li
                         class="text-sm uppercase font-semibold md:text-light-black text-white leading-[100%] py-1 after:content-[''] after:bg-white after:w-0 after:absolute relative after:h-[1px] after:bottom-0 after:left-1/2 after:-translate-x-1/2 after:z-50 after:duration-300 hover:after:w-full hover:text-white duration-300 cursor-pointer">
-                        <a id="nav-link" href="#kontakt">Kontakt</a>
+                        <a id="nav-link" href="#newslettra">Kontakt</a>
                     </li>
                 </ul>
                 <div onclick="toggleNavbar()"
@@ -119,7 +119,7 @@
         <img class="absolute bottom-0 w-full left-0" src="./assets/images/png/podcast-cloud.png" alt="">
     </section>
     <!-- NAS SECTION -->
-    <section class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
+    <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
         <div class="max-w-[1240px] mx-auto lg:pt-[165px] md:pt-[140px] pt-[70px] xl:pb-[258px] lg:pb-[120px]">
             <div class="lg:flex px-[30px]">
                 <div class="lg:max-w-md">
@@ -196,7 +196,7 @@
             class="z-20 pointer-events-none absolute bottom-0">
     </section>
     <!-- USŁUGI SECTION -->
-    <section class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
+    <section id="uslugi" class="pt-16 md:pb-[139px] pb-14 bg-light-black max-w-[1920px] mx-auto">
         <div class="container mx-auto max-w-[1240px] px-[30px]">
             <div class="flex justify-between">
                 <h2
@@ -274,7 +274,7 @@
         </div>
     </section>
     <!-- PROTOPIA SECTION -->
-    <section class="bg-orange relative max-w-[1920px] mx-auto xl:min-h-[612px]">
+    <section id="protopia" class="bg-orange relative max-w-[1920px] mx-auto xl:min-h-[612px]">
         <div class="container max-w-[1240px] mx-auto">
             <div class="md:flex md:pt-[91px] xl:pb-[296px] md:pb-64 p-[30px]">
                 <div class="flex flex-row  gap-5">
@@ -465,20 +465,20 @@
                     </div>
                     <div class="max-sm:max-w-[130px]">
                         <ul>
-                            <li><a class="text-white max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
-                                    href="">Gdzie
+                            <li><a class="text-white relative after:absolute after:-bottom-1 after:left-1/2 after:-translate-x-1/2 after:h-0.5 after:w-0 after:bg-white after:rounded hover:after:w-full after:duration-300 after:ease-linear after:transition-all max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
+                                    href="#patoarchitekciPodcast">Gdzie
                                     słuchać</a></li>
-                            <li><a class="text-white max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
-                                    href="">O nas</a>
+                            <li><a class="text-white relative after:absolute after:-bottom-1 after:left-1/2 after:-translate-x-1/2 after:h-0.5 after:w-0 after:bg-white after:rounded hover:after:w-full after:duration-300 after:ease-linear after:transition-all max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
+                                    href="#oNas">O nas</a>
                             </li>
-                            <li><a class="text-white max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
-                                    href="">Szkolenia</a>'
+                            <li><a class="text-white relative after:absolute after:-bottom-1 after:left-1/2 after:-translate-x-1/2 after:h-0.5 after:w-0 after:bg-white after:rounded hover:after:w-full after:duration-300 after:ease-linear after:transition-all max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
+                                    href="#uslugi">Szkolenia</a>'
                             </li>
-                            <li><a class="text-white max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
-                                    href="">Bezpłatna
+                            <li><a class="text-white relative after:absolute after:-bottom-1 after:left-1/2 after:-translate-x-1/2 after:h-0.5 after:w-0 after:bg-white after:rounded hover:after:w-full after:duration-300 after:ease-linear after:transition-all max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
+                                    href="#protopia">Bezpłatna
                                     Konsultacja</a></li>
-                            <li><a class="text-white max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
-                                    href="">Kontakt</a>
+                            <li><a class="text-white relative after:absolute after:-bottom-1 after:left-1/2 after:-translate-x-1/2 after:h-0.5 after:w-0 after:bg-white after:rounded hover:after:w-full after:duration-300 after:ease-linear after:transition-all max-sm:text-xs font-inter font-bold leading-[30px] uppercase "
+                                    href="#newslettra">Kontakt</a>
                             </li>
                         </ul>
                     </div>
