SUBSKRYBUJ PODCAST-responsve-complete

--- a/helper.html
+++ b/helper.html
@@ -17,7 +17,7 @@
 
     </section>
     <!-- ODCINKI section -->
-    <section class="min-h-screen relative bg-light-black max-w-[1920px] mx-auto">
+    <section class="relative bg-light-black max-w-[1920px] mx-auto">
         <div class="max-w-[1240px] px-[30px] mx-auto">
             <h2
                 class="font-medium text-[36px] sm:text-[44px] md:text-[52px] lg:text-[64px] text-white font-tomorrow sm:pl-[50px]">
@@ -264,7 +264,35 @@
         </div>
         <img class="w-full absolute bottom-0" src="./assets/images/png/cloud-1.png" alt="bottom-cloud-img">
     </section>
-    <!-- SUBSKRYBUJ PODCASTsection -->
+    <!-- SUBSKRYBUJ PODCAST section -->
+    <section
+        class="pt-[40px] pb-[46px] sm:pt-[80px] sm:pb-[96px] md:pt-[102px] md:pb-[148px] max-w-[1920px] mx-auto relative">
+        <img class="absolute bottom-5 min-[992px]:top-0 right-5 min-[992px]:right-40 w-[48px] sm:w-[105.56px] h-[48px] sm:h-[105.56px] "
+            src="./assets/images/svg/cross.svg" alt="cross">
+        <div class="max-w-[1150px] px-[30px] mx-auto">
+            <h2
+                class="font-tomorrow font-semibold whitespace-nowrap text-[24px] sm:text-[32px] md:text-[36px] lg:text-[40px] leading-[32px] text-center">
+                SUBSKRYBUJ PODCAST</h2>
+            <div
+                class="flex max-[992px]:flex-wrap max-[768px]:flex-col gap-[28px] min-[768px]:gap-[50px] pt-[33px] min-[768px]:pt-[66px] min-[768px]:pt-[95px] mx-auto">
+                <a href="https://www.youtube.com/" target="_blank"
+                    class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] sm:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out">
+                    <img class="max-[768px]:w-[98.94px] max-[768px]:h-[22.42px]"
+                        src="./assets/images/svg/youtube-svg.svg" alt="yourube-svg">
+                </a>
+                <a class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] sm:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out"
+                    href="https://open.spotify.com/" target="_blank">
+                    <img class="max-[768px]:w-[70.19px] max-[768px]:h-[22.42px]"
+                        src="./assets/images/svg/spotify-svg.svg" alt="spotify-svg">
+                </a>
+                <a class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] sm:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out"
+                    href="https://podcasts.apple.com/us/browse" target="_blank">
+                    <img class="max-[768px]:w-[119px] max-[768px]:h-[22.42px]" src="./assets/images/svg/apple-svg.svg"
+                        alt="apple-svg">
+                </a>
+            </div>
+        </div>
+    </section>
     <script src="./assets/js/app.js"></script>
 </body>
 
