SUBSKRYBUJ PODCAST-complete

--- a/helper.html
+++ b/helper.html
@@ -256,7 +256,7 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="mb-[250px] text-base sm:text-lg md:text-xl lg:text-2xl text-white font-tomorrow uppercase leading-[28px] sm:leading-[30px] lg:leading-[32px] font-semibold border-2 rounded-full 
+            <button type="button" class="mb-[100px] sm:mb-[250px] text-base sm:text-lg md:text-xl lg:text-2xl text-white font-tomorrow uppercase leading-[28px] sm:leading-[30px] lg:leading-[32px] font-semibold border-2 rounded-full 
          px-6 sm:px-10 md:px-[50px] lg:px-[61.7px] py-2 sm:py-[4.5px] border-white mt-5 
          hover:bg-white hover:text-black transition-all duration-300 ease-in-out">
                 Wszystkie Odcinki
