navbar open error solved

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
                         <a id="nav-link" href="#newslettra">Kontakt</a>
                     </li>
                 </ul>
-                <div onclick="toggleNavbar()"
-                    class="z-50 group relative !min-h-[17px] ml-auto pt-[74px] mr-[30px] !w-[25px] flex flex-col justify-center items-center gap-1 md:hidden">
-                    <span id="toggleBar1" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
-                    <span id="toggleBar2" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
-                    <span id="toggleBar3" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                <div class="pt-[74px]">
+                    <div onclick="toggleNavbar()"
+                        class="z-50 group relative !min-h-[17px] ml-auto mr-[30px] !w-[25px] flex flex-col justify-center items-center gap-1 md:hidden">
+                        <span id="toggleBar1" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                        <span id="toggleBar2" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                        <span id="toggleBar3" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
+                    </div>
                 </div>
             </nav>
             <div
