spacing error solved

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                         <a id="nav-link" href="#newslettra">Kontakt</a>
                     </li>
                 </ul>
-                <div class="pt-[74px]">
+                <div class="pt-[74px] md:hidden">
                     <div onclick="toggleNavbar()"
-                        class="z-50 cursor-pointer group relative !min-h-[17px] ml-auto mr-[30px] !w-[25px] flex flex-col justify-center items-center gap-1 md:hidden">
+                        class="z-50 cursor-pointer group relative !min-h-[17px] ml-auto mr-[30px] !w-[25px] flex flex-col justify-center items-center gap-1">
                         <span id="toggleBar1" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
                         <span id="toggleBar2" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
                         <span id="toggleBar3" class="origin-left ml-auto h-[3px] bg-white duration-300 w-full"></span>
