change-radius-in-SUBSKRYBUJ-PODCAST-section

--- a/helper.html
+++ b/helper.html
@@ -277,16 +277,16 @@
             <div
                 class="flex max-[992px]:flex-wrap max-[768px]:flex-col gap-[28px] min-[768px]:gap-[50px] pt-[33px] min-[768px]:pt-[66px] min-[768px]:pt-[95px] mx-auto">
                 <a href="https://www.youtube.com/" target="_blank"
-                    class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] sm:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out">
+                    class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] md:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out">
                     <img class="max-[768px]:w-[98.94px] max-[768px]:h-[22.42px]"
                         src="./assets/images/svg/youtube-svg.svg" alt="yourube-svg">
                 </a>
-                <a class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] sm:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out"
+                <a class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] md:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out"
                     href="https://open.spotify.com/" target="_blank">
                     <img class="max-[768px]:w-[70.19px] max-[768px]:h-[22.42px]"
                         src="./assets/images/svg/spotify-svg.svg" alt="spotify-svg">
                 </a>
-                <a class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] sm:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] transition-all duration-300 ease-in-out"
+                <a class="w-[350px] h-[100px] max-[768px]:h-[56.04px] max-[768px]:w-[196.13px] items-center justify-center mx-auto border border-[#201B20] rounded-[16.81px] md:rounded-[30px] flex hover:shadow-2xl hover:scale-[1.1] hover transition-all duration-300 ease-in-out"
                     href="https://podcasts.apple.com/us/browse" target="_blank">
                     <img class="max-[768px]:w-[119px] max-[768px]:h-[22.42px]" src="./assets/images/svg/apple-svg.svg"
                         alt="apple-svg">
@@ -299,7 +299,6 @@
         class="fixed bottom-8 right-8 px-4 py-2 text-white text-[16px] rounded-md !bg-orange hover:bg-black cursor-pointer hidden z-[9999] transition-opacity duration-300">
         ↑
     </button>
-
     <script src="./assets/js/app.js"></script>
 </body>
 
