--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             #KingaGaździńska
                         </p>
                         <button
-                            class="group flex items-center md:gap-3 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
+                            class="group flex items-center md:gap-3 active:scale-95 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
                             <div
                                 class="md:size-9 size-[27px] rounded-full flex justify-center items-center bg-orange group-hover:bg-white transition-all duration-300">
                                 <svg class="md:w-[23px] md:h-5 w-[17px] h-[15px]" width="23" height="20" viewBox="0 0 23 20" fill="none"
@@ -205,7 +205,7 @@
                             #KingaGaździńska
                         </p>
                         <button
-                            class="group flex items-center md:gap-3 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
+                            class="group flex items-center md:gap-3 active:scale-95 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
                             <div
                                 class="md:size-9 size-[27px] rounded-full flex justify-center items-center bg-orange group-hover:bg-white transition-all duration-300">
                                 <svg class="md:w-[23px] md:h-5 w-[17px] h-[15px]" width="23" height="20" viewBox="0 0 23 20" fill="none"
@@ -251,7 +251,7 @@
                             #KingaGaździńska
                         </p>
                         <button
-                            class="group flex items-center md:gap-3 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
+                            class="group flex items-center md:gap-3 active:scale-95 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
                             <div
                                 class="md:size-9 size-[27px] rounded-full flex justify-center items-center bg-orange group-hover:bg-white transition-all duration-300">
                                 <svg class="md:w-[23px] md:h-5 w-[17px] h-[15px]" width="23" height="20" viewBox="0 0 23 20" fill="none"
@@ -297,7 +297,7 @@
                             #KingaGaździńska
                         </p>
                         <button
-                            class="group flex items-center md:gap-3 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
+                            class="group flex items-center md:gap-3 active:scale-95 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
                             <div
                                 class="md:size-9 size-[27px] rounded-full flex justify-center items-center bg-orange group-hover:bg-white transition-all duration-300">
                                 <svg class="md:w-[23px] md:h-5 w-[17px] h-[15px]" width="23" height="20" viewBox="0 0 23 20" fill="none"
@@ -343,7 +343,7 @@
                             #KingaGaździńska
                         </p>
                         <button
-                            class="group flex items-center md:gap-3 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
+                            class="group flex items-center md:gap-3 active:scale-95 gap-[9px] font-semibold text-xl max-[992px]:text-[15px] leading-[100%] bg-white text-black hover:bg-black hover:text-white md:py-[5px] md:pl-[7px] md:pr-[27px] py-1 pl-1 pr-[18px] rounded-[50px] mt-[40px] max-[1100px]:mt-[35px] max-[992px]:mt-[20px] transition-all duration-300 font-inter">
                             <div
                                 class="md:size-9 size-[27px] rounded-full flex justify-center items-center bg-orange group-hover:bg-white transition-all duration-300">
                                 <svg class="md:w-[23px] md:h-5 w-[17px] h-[15px]" width="23" height="20" viewBox="0 0 23 20" fill="none"
