change in NAS section

--- a/index.html
+++ b/index.html
@@ -403,55 +403,58 @@
         <div class="max-w-[1240px] mx-auto lg:pt-[165px] md:pt-[140px] pt-[70px] xl:pb-[258px] lg:pb-[120px]">
             <div class="lg:flex px-[30px]">
                 <div class="lg:max-w-md">
-                    <h2 class="font-semibold text-[64px] text-light-black font-tomorrow leading-[100%] uppercase">
+                    <h2
+                        class="font-semibold text-2xl sm:text-[48px] md:text-[64px] text-light-black font-tomorrow leading-[100%] uppercase">
                         O nas
                     </h2>
                     <div class="absolute top-[9%] left-[33%] hidden lg:block pointer-events-none">
                         <img src="./assets/images/svg/arrow.svg" alt="decorative arrow">
                     </div>
-                    <div class="xl:pt-16 pt-8">
+                    <div class="pt-[35px] md:pt-[65px]">
                         <h2
-                            class="font-semibold md:text-[40px] text-4xl text-light-black font-tomorrow leading-[48px] uppercase text-white">
+                            class="font-semibold md:text-[40px] text-[20px] text-light-black font-tomorrow leading-[48px] uppercase text-white">
                             Łukasz Kałużny
                         </h2>
-                        <p class="font-inter font-medium md:text-xl text-lg leading-[100%] pt-[35px] lg:max-w-[422px]">
+                        <p
+                            class="font-inter font-medium text-sm md:text-xl sm:text-lg leading-[120%] pt-[15px] sm:pt-[35px] lg:max-w-[422px]">
                             Inżynier, architekt i współzałożyciel Protopia. Specjalista od Microsoft Azure z tytułem MVP
                             od
                             2012 roku. Uwielbia wyzwania i najnowsze technologie. Łukasz pomaga firmom przekształcać
                             technologię w realne korzyści biznesowe. Jego motto: zero bullshitu, same konkrety. Zawsze z
                             porządną dawką humoru.
                         </p>
-                        <div class="pt-[35px] gap-3 flex">
+                        <div class="pt-[15px] sm:pt-[35px] gap-3 flex">
                             <a href="https://in.linkedin.com/" target="_blank">
-                                <img class="pointer-events-none" src="./assets/images/svg/linkdin.svg"
-                                    alt="LinkedIn profile">
+                                <img class="pointer-events-none max-sm:max-w-[30px]"
+                                    src="./assets/images/svg/linkdin.svg" alt="LinkedIn profile">
                             </a>
                             <a href="https://x.com/?lang=en" target="_blank">
-                                <img class="pointer-events-none" src="./assets/images/svg/twitter.svg"
-                                    alt="Twitter profile">
+                                <img class="pointer-events-none max-sm:max-w-[30px]"
+                                    src="./assets/images/svg/twitter.svg" alt="Twitter profile">
                             </a>
                         </div>
                     </div>
                     <div class="pt-[35px]">
                         <h2
-                            class="font-semibold md:text-[40px] text-4xl text-light-black font-tomorrow leading-[48px] uppercase text-white">
+                            class="font-semibold md:text-[40px] text-[20px] text-light-black font-tomorrow leading-[48px] uppercase text-white">
                             Szymon Warda
                         </h2>
-                        <p class="font-inter font-medium md:text-xl text-lg leading-[100%] pt-[35px] lg:max-w-[423px]">
+                        <p
+                            class="font-inter font-medium text-sm md:text-xl sm:text-lg leading-[120%] pt-[15px] sm:pt-[35px] lg:max-w-[423px]">
                             Managing Partner i Doradca Technologiczny w Protopia, Blogger @ IndexOutOfRange, Autor @
                             Pluralsight, Ambasador @ Neo4j. Szymon prowadzi organizacje przez wyzwania najnowszych
                             technologii, oferując pragmatyczne, dopasowane rozwiązania. Jego wiedza techniczna idzie w
                             parze
                             ze świetną komunikacją. Praca z nim to jedyne w swoim rodzaju doświadczenie.
                         </p>
-                        <div class="pt-[35px] gap-3 flex">
+                        <div class="pt-[15px] sm:pt-[35px] gap-3 flex">
                             <a href="https://in.linkedin.com/" target="_blank">
-                                <img class="pointer-events-none" src="./assets/images/svg/linkdin.svg"
-                                    alt="LinkedIn profile">
+                                <img class="pointer-events-none max-sm:max-w-[30px]"
+                                    src="./assets/images/svg/linkdin.svg" alt="LinkedIn profile">
                             </a>
                             <a href="https://x.com/?lang=en" target="_blank">
-                                <img class="pointer-events-none" src="./assets/images/svg/twitter.svg"
-                                    alt="Twitter profile">
+                                <img class="pointer-events-none max-sm:max-w-[30px]"
+                                    src="./assets/images/svg/twitter.svg" alt="Twitter profile">
                             </a>
                         </div>
                     </div>
@@ -461,12 +464,13 @@
                             <img class="pointer-events-none" src="./assets/images/svg/right-arrow.svg"
                                 alt="right arrow">
                         </span>
-                        <span class="text-xl font-semibold font-inter leading-[32px]">Bezpłatna Konsultacja</span>
+                        <span class="text-lg sm:text-xl font-semibold font-inter leading-[32px]">Bezpłatna
+                            Konsultacja</span>
                     </a>
                 </div>
                 <div>
                     <img src="./assets/images/svg/circle.svg" alt="decorative circle"
-                        class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] pointer-events-none lg:size-[230px] md:size-[100px] size-12 top-0">
+                        class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] pointer-events-none lg:size-[230px] md:size-[100px] size-[30px] top-0">
                     <img src="./assets/images/png/two-people.png" alt="Two people"
                         class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] pointer-events-none lg:absolute xl:top-[8%] top-[11%] right-[0%] object-cover rounded-lg z-0">
                 </div>
@@ -569,7 +573,7 @@
                             Doradzamy, szkolimy i wdrażamy innowacje, które napędzają rozwój firm.
                         </p>
                         <button
-                            class="hidden md:block active:scale-95 xl:mt-[42px] lg:mt-6 md:mt-[40px] mt-6 md:px-11 px-9 py-[9px] border border-black text-black rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
+                            class="hidden md:block active:scale-95 xl:mt-[42px] lg:mt-6 md:mt-[40px] mt-6 md:px-11 px-9 py-[5.5px] border border-black text-black rounded-full md:text-2xl text-xl leading-[100%] font-medium w-fit hover:bg-white font-inter transition">
                             POZNAJ NASZĄ OFERTĘ
                         </button>
                     </div>
@@ -604,7 +608,7 @@
                 </div>
                 <div class="flex justify-center mt-8 sm:mt-[93px]">
                     <button type="submit"
-                        class="bg-orange max-sm:text-sm hover:text-orange hover:bg-light-black transition-all duration-300 ease-linear active:scale-95 text-light-black p-[10.5px] w-full max-w-[353px] rounded-[70px] font-bold sm:text-2xl leading-[100%] uppercase">
+                        class="bg-orange max-sm:text-sm hover:text-orange hover:bg-light-black transition-all duration-300 ease-linear active:scale-95 text-light-black py-[6.5px] px-[10.5px] w-full max-w-[353px] rounded-[70px] font-bold sm:text-2xl leading-[100%] uppercase">
                         Zapisz się
                     </button>
                 </div>
