--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
     </section>
     <!-- ODCINKI section -->
     <section class="relative bg-light-black max-w-[1920px] mx-auto">
-        <div class="max-w-[1240px] px-[30px] mx-auto">
+        <div class="max-w-[1240px] px-[30px] mx-auto pb-[51px]">
             <h2
                 class="font-medium text-[36px] sm:text-[44px] md:text-[52px] lg:text-[64px] text-white font-tomorrow sm:pl-[50px]">
                 ODCINKI
             </h2>
     
-            <div class="pt-[43px] max-[426px]:pt-[23px] flex flex-col gap-5 max-[769px]:gap-[55px]">
+            <div class="pt-3 max-[426px]:pt-[23px] flex flex-col gap-5 max-[769px]:gap-[55px]">
                 <div class="flex max-[769px]:flex-wrap gap-[30px] max-[769px]:gap-[20px] py-10 max-[769px]:py-0">
                     <div>
                         <iframe width="400" height="300"
@@ -456,14 +456,14 @@
                             </a>
                         </div>
                     </div>
-                    <a href="#"
-                        class="inline-flex items-center justify-between gap-5 bg-white text-black lg:mt-[65px] mt-11 mb-5 pl-[5px] pr-10 py-[5px] rounded-full font-semibold shadow-md hover:bg-gray-100 transition">
-                        <span class="size-[35px] flex items-center justify-center bg-orange rounded-full text-white">
+                    <button href="#"
+                        class="inline-flex items-center justify-between gap-5 bg-white text-black lg:mt-[65px] mt-11 mb-5 pl-[5px] pr-10 py-[5px] rounded-full font-semibold shadow-md hover:bg-black hover:text-white group duration-300">
+                        <span class="size-[35px] flex items-center group-hover:bg-white justify-center duration-300 bg-orange rounded-full">
                             <img class="pointer-events-none" src="./assets/images/svg/right-arrow.svg"
                                 alt="right arrow">
                         </span>
-                        <span class="text-xl font-semibold font-inter leading-[32px]">Bezpłatna Konsultacja</span>
-                    </a>
+                        <span class="text-xl font-semibold duration-300 font-inter leading-[32px]">Bezpłatna Konsultacja</span>
+                    </button>
                 </div>
                 <div>
                     <img src="./assets/images/svg/circle.svg" alt="decorative circle"
