change in NAS  section

--- a/index.html
+++ b/index.html
@@ -399,7 +399,8 @@
         </div>
     </section>
     <!-- NAS SECTION -->
-    <section id="oNas" class="bg-orange relative overflow-hidden max-w-[1920px] mx-auto">
+    <section id="oNas"
+        class="bg-orange relative overflow-hidden max-w-[1920px] lg:max-h-[1443px] lg:min-h-[1443px] mx-auto">
         <div class="max-w-[1240px] mx-auto lg:pt-[165px] md:pt-[140px] pt-[70px] xl:pb-[258px] lg:pb-[120px]">
             <div class="lg:flex px-[30px]">
                 <div class="lg:max-w-md">
@@ -473,7 +474,7 @@
                     <img src="./assets/images/svg/circle.svg" alt="decorative circle"
                         class="absolute lg:top-[6%] lg:right-[-10.5%] xl:size-[303px] pointer-events-none lg:size-[230px] md:size-[100px] size-[30px] top-0">
                     <img src="./assets/images/png/two-people.png" alt="Two people"
-                        class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] pointer-events-none lg:absolute xl:top-[8%] top-[11%] right-[0%] object-cover rounded-lg z-0">
+                        class="xl:max-w-[1000px] lg:max-w-[700px] md:max-w-[600px] pointer-events-none lg:absolute xl:top-[8%] top-[28%] right-[0%] object-cover rounded-lg z-0">
                 </div>
             </div>
         </div>
